; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_skip.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_skip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @strv_skip(i8** %0, i64 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  store i8** %0, i8*** %4, align 8
  store i64 %1, i64* %5, align 8
  br label %6

6:                                                ; preds = %15, %2
  %7 = load i64, i64* %5, align 8
  %8 = icmp ugt i64 %7, 0
  br i1 %8, label %9, label %20

9:                                                ; preds = %6
  %10 = load i8**, i8*** %4, align 8
  %11 = call i64 @strv_isempty(i8** %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i8**, i8*** %4, align 8
  store i8** %14, i8*** %3, align 8
  br label %22

15:                                               ; preds = %9
  %16 = load i8**, i8*** %4, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i32 1
  store i8** %17, i8*** %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = add i64 %18, -1
  store i64 %19, i64* %5, align 8
  br label %6

20:                                               ; preds = %6
  %21 = load i8**, i8*** %4, align 8
  store i8** %21, i8*** %3, align 8
  br label %22

22:                                               ; preds = %20, %13
  %23 = load i8**, i8*** %3, align 8
  ret i8** %23
}

declare dso_local i64 @strv_isempty(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
